--- a/discussion/7.logistic/discussion7.Rmd
+++ b/discussion/7.logistic/discussion7.Rmd
@@ -13,7 +13,7 @@ This assignment should be submitted on Canvas as a .pdf or Word document by 12:0
 
 Make sure you update the document header to reflect your name and the type of document you want to create (pdf_document or word_document). **Unedited R output, or code, in the body of your assignment is not acceptable.** Please round numerical values to 2--3 significant digits, and include your R code in a .R file uploaded as a separate document. See the "How to Write a Proper Homework" document on Canvas for additional guidelines.  
 
-Our scientific question for this analysis is: \textbf{is there an association between C reactive protein (CRP) and death within 3 years?} In addition to the two variables of primary interest, you may restrict attention to age (`age`; years), sex (`male`; male = 1, female = 0), BMI (`bmi`; kg/$\text{m}^2$), smoking history (`smoker`; 1 = smoker, 0 = nonsmoker), cholesterol (`cholest`; mg/dL), and prior history of cardiovascular disease (`prevdis`; 1 = previous history of cardiovascular disease, 0 = no previous history). Recall that these data come from a cohort study.
+Our scientific question for this analysis is: \textbf{is there an association between C reactive protein (CRP) and death within 3 years after study enrollment?} In addition to the two variables of primary interest, you may restrict attention to age (`age`; years), sex (`male`; male = 1, female = 0), BMI (`bmi`; kg/$\text{m}^2$), smoking history (`smoker`; 1 = smoker, 0 = nonsmoker), cholesterol (`cholest`; mg/dL), and prior history of cardiovascular disease (`prevdis`; 1 = previous history of cardiovascular disease, 0 = no previous history). Recall that these data come from a cohort study.
 
 I have removed the 67 people in these data with missing CRP value, leaving you with 4933 participants in your data. These data are located on Canvas under `Files > Data > inflamm_no_missing_crp.txt`.
 
@@ -21,7 +21,59 @@ You will have to create a new variable, `death_in_3`, that takes value 1 if the 
 
 \textbf{Often, when working with a rare outcome, researchers will say that the odds ratio approximates the relative risk. In this analysis, you will explore that assertion mathematically and using `R` to estimate both the odds ratio and the relative risk.} In the inflammatory biomarkers dataset, 6.7%, or approximately 1 in 15, of the participants died within 3 years, making death a somewhat rare outcome.
 
-# 1. Comparing the relative risk and odds ratio with a rare outcome
+# 1. Logistic regression with a rare outcome
+
+In this problem, you'll use the `inflamm` dataset (without participants who were missing data on CRP) to explore the association between CRP and death within 3 years. Recall that CRP is a measure of inflammation in the body.
+
+## Classify each additional variable (age, sex, BMI, smoking history, cholesterol, prior history of cardiovascular disease) as a potential confounder, precision variable, or irrelevant. Justify each choice in 1 sentence.
+
+*Replace with your answer.*
+
+## Write out the logistic regression model relating the odds of death within three years to CRP, adjusting for the variables that you identified in the previous part, and identify the parameter of interest (regression coefficient) for addressing your scientific question. Replace `\dots` below with the names of the variables you are adjusting for in the brackets on the left-hand side of the equation and with the regression parameters and variables on the right-hand side of the equation.
+
+*Replace with your answer: $\log \{\text{Odds}(\text{Death in 3} \mid \text{CRP}, \dots)\} = \beta_0 + \beta_1 \text{CRP} + \dots$.*
+
+## Fit a logistic regression of death within 3 years on CRP, adjusting for the potential confounders and precision variables you identified previously. Interpret the coefficient estimate for the parameter of interest that you identified in the previous question. (1 sentence)
+
+*Replace with your answer.*
+
+## Write a full summary of the results of your logistic regression analysis. (4--5 sentences)
+
+*Replace with your answer.*
+
+# 2. Relative risk regression with a rare outcome
+
+As in the previous problem, you'll use the `inflamm` dataset (without participants who were missing data on CRP) to explore the association between CRP and death within 3 years. 
+
+\textbf{Now, however, you will quantify the association between CRP and death within three years using the relative risk.}
+
+In logistic regression, we model the log odds as a linear function of regression parameters. In relative risk regression, we model the log probability as a linear function of regression parameters; for simple relative risk regression, this is given explicitly by:
+
+\begin{align*}
+\log \{P(Y = 1 \mid X)\} = & \ \beta_0 + \beta_1 X.
+\end{align*}
+
+Here, we'll give you the interpretations for this simple regression model. The second bonus question asks you to do the math to verify that these interpretations are correct.
+
+The intercept, $\beta_0$, is the log probability of $Y = 1$ among those people with $X = 0$.
+
+As in logistic regression, it is much more meaningful to interpret $e^{\beta_0}$, because talking about "log probabilities" is difficult. Thus, $e^{\beta_0}$ is the probability that $Y = 1$ among those people with $X = 0$.
+
+The slope, $\beta_1$, is the difference in log probability of $Y = 1$ comparing two groups that differ in $X$ by one unit.
+
+As in logistic regression, it is much more meaningful to interpret $e^{\beta_1}$.  Thus, $e^{\beta_1}$ is the relative risk of $Y = 1$ comparing two groups that differ in $X$ by one unit.
+
+## Fit a relative risk regression (change `"odds"` to `"rate"` in your call to `regress`) of death within 3 years on CRP, adjusting for the same potential confounders and precision variables that you identified in the logistic regression problem. Interpret the coefficient estimate for the parameter of interest. (1 sentence)
+
+*Replace with your answer.*
+
+## Write a full summary of the results of your relative risk regression analysis. (4--5 sentences)
+
+*Replace with your answer.*
+
+\newpage
+
+# BONUS: Comparing the relative risk and odds ratio with a rare outcome
 
 First, you'll compare the relative risk and odds ratio mathematically, when you have a rare outcome. For this question, consider a simple setting with binary outcome $D$ and a single binary exposure $E$.
 
@@ -41,37 +93,7 @@ First, you'll compare the relative risk and odds ratio mathematically, when you 
 
 *Replace with your answer.*
 
-# 2. Logistic regression with a rare outcome
-
-In this problem, you'll use the `inflamm` dataset (without participants who were missing data on CRP) to explore the association between CRP and death within 3 years. Recall that CRP is a measure of inflammation in the body.
-
-## Classify each additional variable (age, sex, BMI, smoking history, cholesterol, prior history of cardiovascular disease) as a potential confounder, precision variable, or irrelevant. Justify each choice in 1 sentence.
-
-*Replace with your answer.*
-
-## Write out the logistic regression model relating the odds of death within three years to CRP, adjusting for the variables that you identified in the previous part, and identify the parameter of interest (regression coefficient) for addressing your scientific question.
-
-*Replace with your answer: $\log \{\text{Odds}(\text{Death in 3} \mid \text{CRP}, \dots)\} = \beta_0 + \beta_1 \text{CRP} + \dots$.*
-
-## Fit a logistic regression of death within 3 years on CRP, adjusting for the potential confounders and precision variables you identified previously. Interpret the coefficient estimate for the parameter of interest that you identified in the previous question. (1 sentence)
-
-*Replace with your answer.*
-
-## Write a full summary of the results of your logistic regression analysis. (4--5 sentences)
-
-*Replace with your answer.*
-
-# 3. Relative risk regression with a rare outcome
-
-As in the previous problem, you'll use the `inflamm` dataset (without participants who were missing data on CRP) to explore the association between CRP and death within 3 years. 
-
-\textbf{Now, however, you will quantify the association between CRP and death within three years using the relative risk.}
-
-In logistic regression, we model the log odds as a linear function of regression parameters. In relative risk regression, we model the log probability as a linear function of regression parameters; for simple relative risk regression, this is given explicitly by:
-
-\begin{align*}
-\log \{P(Y \mid X)\} = & \ \beta_0 + \beta_1 X.
-\end{align*}
+# BONUS: Doing the math to interpret relative risk regression parameters
 
 ## Interpret the intercept in the simple relative risk regression model given above. 
 *Replace with your answer.*
@@ -84,16 +106,24 @@ In logistic regression, we model the log odds as a linear function of regression
 
 *Replace with your answer.*
 
-## Fit a relative risk regression (change `"odds"` to `"rate"` in your call to `regress`) of death within 3 years on CRP, adjusting for the same potential confounders and precision variables that you identified in the logistic regression problem. Interpret the coefficient estimate for the parameter of interest. (1 sentence)
+# BONUS: Comparing logistic and relative risk regression
 
-*Replace with your answer.*
+## Compare your results from the logistic regression analysis and the relative risk analysis. Are your estimates of the odds ratio and relative risk similar? Would you say that the outcome is rare in this setting? Which of these two regression techniques would you choose to use, if you were approached with this study (and before you looked at the data)? Why?
 
-## Write a full summary of the results of your relative risk regression analysis. (4--5 sentences)
-
-*Replace with your answer.*
+*Replace with your response.*
 
 \newpage
 
-# BONUS: Comparing logistic and relative risk regression
-
 # BONUS: Comparing logistic, relative risk, and linear regression
+
+## Fit a linear regression to these data, adjusting for the same potential confounders and precision variables that you used in the logistic and relative risk regressions. Write a full summary of the results of your linear regression analysis. (4--5 sentences)
+
+*Replace with your response.*
+
+## Compare your results from your logistic regression analysis to your linear regression analysis. Recall that the odds ratio measures multiplicative departures from the null, while the risk difference measures additive departures from the null. What do your estimates of the odds ratio and risk difference tell you about the magnitude of the association between CRP and death in 3 years? Which of these two regression techniques would you choose to use, if you were approached with this study (and before you looked at the data)? Why?
+
+*Replace with your response.*
+
+## Compare your results from your relative risk regression analysis to your linear regression analysis. Recall that the relative risk measures multiplicative departures from the null, while the risk difference measures additive departures from the null. What do your estimates of the odds ratio and risk difference tell you about the magnitude of the association between CRP and death in 3 years? Which of these two regression techniques would you choose to use, if you were approached with this study (and before you looked at the data)? Why?
+
+*Replace with your response.*
