--- a/r_cheat_sheet.Rmd
+++ b/r_cheat_sheet.Rmd
@@ -58,3 +58,4 @@ We have added a column that denotes which R package contains each function (note
 | `qqnorm` | Draw a Normal Q-Q plot | `qqnorm(residuals(lm(y ~ x1 + x2)))` | Draw a Normal Q-Q plot of the residuals from a regression | Section 3.5, slide 1.203 | `stats`
 | `acf` | Draw an autocorrelation plot | `acf(residuals(lm(y ~ x1 + x2)))` | Draw an autocorrelation plot from a regression | Section 3.5, slide 1.207 | `stats`
 | `predict` | Obtain predictions from a base R regression object | `predict(lm(fev ~ smoke*male + height, data = adultfev), newdata = data.frame(smoke = 0, male = 0, height = 60))` | Obtain predictions from a linear regression of FEV on smoking, male, height, and the smoking-male interaction, for a new subject who doesn't smoke, is female, and has height 60 inches | Section 3, slide 1.163 | `stats`
+| `regress("odds", ...)` | Run logistic regression. | `regress('odds', diab2~sex, data = inflamm)` | Run logistic regression(i.e., look at the ratio of odds) with the binary variable `diab2` as the outcome and sex as the predictor. The argument `data=inflamm` says which dataset these variables are stored in. | Chapter 2 slides, slide 2.33 | `uwIntroStats` | `glm(family = "binomial")` 
