--- a/project/presentation.Rmd
+++ b/project/presentation.Rmd
@@ -10,53 +10,94 @@ output: pdf_document
 
 Being able to present your work is an important skill. Here, you will give a group presentation of your data, scientific questions, statistical results, and scientific conclusions to the rest of the class. 
 
-These presentations are limited to **10 minutes**. Each section in the template below will be shorter than its corresponding section in the report---remember, you have a finite amount of time for the presentation! The main idea is to give your fellow classmates (and instructors) an idea of what you've been working on all quarter.
+These presentations are limited to **8 slides (not including a title slide), totaling 10 minutes, including questions**. Ideally, you will talk for fewer than 10 minutes, so that your classmates have time to ask questions; regardless, **we will cut everything off at 10 minutes to ensure that each group has time to present**. Each section in the template below will be shorter than its corresponding section in the report---remember, you have a finite amount of time for the presentation! The main idea is to give your fellow classmates (and instructors) an idea of what you've been working on all quarter.
 
 Submit your presentation slides on Canvas by 10:00am on May 29. **Do not discuss your project with students outside of your group or post questions about your project on the Canvas discussion board.** But, feel free to ask us any questions in person/over email instead!
 
 This assignment is graded and is worth 20% of your total project grade.
 
-# Template:
+# Template and Rubric:
 
-## Title
+## Formatting (2 points)
 
-Make up a title for your proposed study!
+To receive full credit for this portion of the assignment, you should...
 
-## Background and Introduction
+- have eight slides or less
+- equal speaking time for each group member
 
-Provide a brief description of your data to give perspective into the importance of the problem and the situation under study. 
+You will lose points for...
 
-## Scientific Questions
+- many typos on slides
 
-In this section, you should lay out the scientific agenda of your analysis. In particular, you should state both the overall scientific goal and the specific scientific objectives.
+## Title (1 point)
 
-Example: a study of smoking and lung function in children
+*Make up a title for your proposed study!*
 
-The overall scientific goal is to assess the association between smoking and lung function in children. Specifically, we will address the following questions:
+To receive full credit for this portion of the assignment, your first slide (title slide) should...
 
-1. Is smoking associated with decreased lung function in children?
-2. If there is an association between smoking and decreased lung function, is this effect different in older versus younger children.
+- include the title of your study
+- include all group member names
 
-## Statistical Methods
+## Background and Introduction (4 points)
 
-Describe all of the descriptive statistics you will compute, how you will compute them, and how you will display your results. Generally, these are used informally to evaluate and compare subgroups, identify errors in the data, and identify patterns of missing data.
+*Provide a brief description of your study and scientific area to give perspective into the importance of the problem and the situation under study; this section will be a brief synopsis of the corresponding section in your report. In particular, why were the data collected?*
 
-All statistical analyses should start with data description. Often, these descriptive analyses will support the inferential analyses you report. Figures and tables are both reasonable ways to display descriptive analyses.
+To receive full credit for this portion of the assignment, your background/introduction should include...
 
-Describe all of the inferential analyses you will run (e.g., linear regression), along with the estimates that you will report. These are the hypothesis tests and estimates that will be used to address each of the questions you listed in the "scientific questions" section. You should state the statistical method that will be used to test each hypothesis, along with the response variable for each question and the significance level you are using. List the assumptions required for the analysis.
+- scientific background
+    - Set the stage for why this is an interesting overall scientific question to study
+    - Why is this an important/relevant outcome to look at?
+    - Why is this an important/relevant predictor/exposure to look at?
+    - What other variables might be related to your outcome and/or predictor?
+- description of study/data
+    - Who (is being studied)? 
+    - Where (was the study conducted/are your subjects from)? 
+    - When (was the data collected)?
+    - Where did you get your data (provide enough detail that someone else could go out and find it)
 
-Also, describe any variables that you adjust for as potential confounders, effect modifiers, or precision variables for each analysis. 
+## Scientific Questions (2 points)
 
-## Results
+*In this section, you should lay out the scientific agenda of your analysis. In particular, you should state both the overall scientific goal and the specific scientific objectives.*
 
-### Description of the study cohort
+To receive full credit for this portion of the assignment, you should include...
 
-Actually run the descriptive analyses that you propose above, and report the results in tables or figures, as appropriate. 
+- your overall scientific goal
+- at least two specific scientific questions
+
+## Statistical Hypotheses (2 points)
+
+*Connect the scientific questions listed above with statistical hypotheses, that you can test using your statistical tools. Make sure to list all variables that you will use in each analysis.*
+
+To receive full credit for this portion of the assignment, you should take each of your (2+) specific scientific questions and re-phrase them as a "statistical question" here. In particular, your statistical question should be a more precise version of your scientific question, which specifies:
+
+- what is the outcome variable
+- what is the predictor of interest
+- what other variables will you adjust for
+- how are you defining association (e.g., difference in means via linear regression, ratio of odds via logisitic regression, ratio of hazards via proportional hazards regression)
+
+## Results (6 points)
+
+### Description of the study cohort (optional)
+
+*Report interesting features of your study population, if you have time.*
 
 ### Inferential analyses
 
-Report and interpret the effect estimates, confidence intervals, and p-values corresponding to each scientific question that you address. 
+*Report and interpret the effect estimates, confidence intervals, and p-values corresponding to each scientific question that you address.*
 
-## Discussion
+To receive full credit for this portion of the assignment, you should include...
 
-Discuss what the statistical results you presented in the previous section mean in terms of the scientific questions that you posed at the beginning of the presentation.
+- the relevant estimates, CIs, p-values from your regression analyses
+- what type of regression was used for each question
+- interpretations of the estimate, confidence interval, and p-value
+- a conclusion tying these results back to the scientific question
+
+## Discussion (3 points)
+
+*Discuss what the statistical results you presented in the previous section mean in terms of the scientific questions that you posed at the beginning of the report.*
+
+To receive full credit for this portion of the assignment, you should include...
+
+- a summary of what you found
+- a discussion of anything you found challenging, or unique features of your data that you had to deal with (and how you dealt with these features)
+
