added logistic, poisson to cheat sheet

--- a/r_cheat_sheet.Rmd
+++ b/r_cheat_sheet.Rmd
@@ -58,4 +58,9 @@ We have added a column that denotes which R package contains each function (note
 | `qqnorm` | Draw a Normal Q-Q plot | `qqnorm(residuals(lm(y ~ x1 + x2)))` | Draw a Normal Q-Q plot of the residuals from a regression | Section 3.5, slide 1.203 | `stats`
 | `acf` | Draw an autocorrelation plot | `acf(residuals(lm(y ~ x1 + x2)))` | Draw an autocorrelation plot from a regression | Section 3.5, slide 1.207 | `stats`
 | `predict` | Obtain predictions from a base R regression object | `predict(lm(fev ~ smoke*male + height, data = adultfev), newdata = data.frame(smoke = 0, male = 0, height = 60))` | Obtain predictions from a linear regression of FEV on smoking, male, height, and the smoking-male interaction, for a new subject who doesn't smoke, is female, and has height 60 inches | Section 3, slide 1.163 | `stats`
-| `regress("odds", ...)` | Run logistic regression. | `regress('odds', diab2~sex, data = inflamm)` | Run logistic regression(i.e., look at the ratio of odds) with the binary variable `diab2` as the outcome and sex as the predictor. The argument `data=inflamm` says which dataset these variables are stored in. | Chapter 2 slides, slide 2.33 | `uwIntroStats` | `glm(family = "binomial")` 
+| `regress("odds", ...)` | Run logistic regression. | `regress('odds', diab2~sex, data = inflamm)` | Run logistic regression (i.e., look at the ratio of odds) with the binary variable `diab2` as the outcome and sex as the predictor. The argument `data=inflamm` says which dataset these variables are stored in. | Chapter 2 slides, slide 2.33 | `uwIntroStats` | `glm(family = "binomial")` 
+| `glm(family = "binomial")` | Run logistic regression. | `glm(diab2 ~ bmi, family = "binomial", data = inflamm)` | Run logistic regression (i.e., look at the ratio of odds) with the binary variable `diab2` as the outcome and sex as the predictor. The argument `data=inflamm` says which dataset these variables are stored in. | Chapter 2 slides, slide 2.41 | `stats` |
+| `predict(type = "response")` | Get predictions on the scale of the outcome. | `predict(mod, newdata = data.frame(bmi = c(30, 15)), type = "response")` | Get predictions of the probability of diabetes for two new values of bmi (30 and 15) based on a logistic regression model `mod` | Chapter 2 slides, slide 2.41 | `stats` |
+| `c()` | Concatenate values together. | `c(30, 15)` | Create a vector (length 2) with two values, 30 and 15. | `base` |
+| `regress("rate", ...)` | Run Poisson regression. | `regress("rate", death_in_3 ~ crp + age + male + bmi + smoker + cholest + prevdis, data = inflamm)` | Run Poisson regression (equivalent to relative risk regression since we have a binary outcome) of death within 3 years of enrollment on CRP (adjusted for potential confounders) in the `inflamm` data | Discussion section 7 key line 128, and Chapter 2 slides, slide 2.47 | `uwIntroStats` | `glm(family = "poisson")` |
+| `glm(family = "poisson"")` | Run Poisson regression. | `glm(death_in_3 ~ crp + age + male + bmi + smoker + cholest + prevdis, family = "poisson", data = inflamm)` | Run Poisson regression (equivalent to relative risk regression since we have a binary outcome) of death within 3 years of enrollment on CRP (adjusted for potential confounders) in the `inflamm` data | Chapter 2 slides, slide 2.47 | `stats` |
