--- a/homework/hw7.Rmd
+++ b/homework/hw7.Rmd
@@ -15,6 +15,67 @@ Make sure you update the document header to reflect your name and the type of do
 
 If you give an honest attempt for all questions, you will receive 2 points for completeness. The remaining 8 points are based on correctness, as specififed in the problem statements.
 
+# 1. Properties of survival data and connecting with logistic regression (3.5 points)
+
+You are part of a team conducting a randomized controlled trial seeking to evaluate whether an experimental chemotherapy regimen in leukemia patients improves survival rates as compared to standard of care. As such, your **outcome of interest is the survival time**, and your **predictor of interest is the treatment group**.
+
+Your first participant is enrolled on 26 March, 2018; at enrollment, this subject is randomized to receive either the experimental chemotherapy regimen or standard of care. You continue enrolling subsequent participants over the next 3 years; on 26 March, 2021, the study ends. You have enrolled and randomized 1,000 participants (500 each to the experimental arm and the standard of care arm) and followed them for at least 1005 days each.
+
+## a. (0.5 points) One of your collaborators proposes that when computing the survival time of participants in your study, you should start counting on 26 March, 2018, when you began enrolling participants. A second collaborator proposes that, instead, you start counting on the date that each individual participant was randomized to a treatment group. Which of these "time zero"s would you prefer to answer the scientific question? Justify your response.
+
+*Type your answer here.*
+
+## b. (0.5 points) State the assumption of uninformative censoring as it applies to this example. Do you believe it to be a reasonable assumption in this setting?
+
+## c. (1 point) Regardless of your answer to part (b), you choose to fit a simple proportional hazards regression model. Letting "Treatment = 0" denote those participants on the standard of care and "Treatment = 1" denote those participants on the experimental chemotherapy regimen, the model can be written as: 
+
+\begin{align*}
+\log h(t \mid \text{Treatment}) = h_0(t) + \beta \text{Treatment}.
+\end{align*}
+
+**State the interpretations of $\beta$ and $\exp(\beta)$ in this example.**
+
+## d. (0.5 points) Download the data from `Canvas > Data > leukemia.txt`. In addition to the treatment assignment (`tx`, 1 = experimental therapy and 0 = standard of care), the observation time (`obs_time`, the time until death or censoring), and the event indicator (`event`, ` 1 = event, 0 = censoring), I have created a variable indicating whether or not the subject died within 6 months (180 days) of study enrollment. Why is this valid? Provide descriptive statistics that support your answer.
+
+## e. (0.5 points) You might also have chosen to analyze these data using logistic regression or relative risk regression instead of proportional hazards regression, based on the outcome of death within 6 months. Perform a logistic regression of death within 6 months of enrollment on treatment assignment, and report your results in 4--5 sentences.
+
+## f. (0.5 points) Which analysis (that of c or e) would you choose prior to looking at the data? Justify your response.
+
+\newpage
+
+# 2. Fitting and interpreting results from proportional hazards regression (4.5 points)
+
+Load the inflammation dataset into `R` (these data are located under `Canvas > Files > Data > inflamm.txt`). In this analysis, you will explore the relationship betwen diabetes and cardiovascular death. First, load the `survival` package using `library("survival")`. Then, create a time-to-event variable by using the following code: `inflamm$ttocvd ~ Surv(time = inflamm$ttodth, event = inflamm$cvddth)` (if you named the data something other than `inflamm`, replace `inflamm` with the name of your dataset).
+
+## a. (0.5 points) Use the `descrip` function in the `uwIntroStats` package to generate descriptive statistics for survival time stratified by diabetes status, and then answer the following questions based on the output.
+
+### i. Which group has a higher restricted mean survival time? Provide your evidence.
+
+### ii. Can you estimate or compare the median survival time? If so, provide the relevant estimate(s). If not, hypothesize why not.
+
+## b. (1 point) Plot the Kaplan-Meier estimate of the survival curves among those with diabetes and those without diabetes. Then answer the following questions based on the plot.
+
+Use the following code to accomplish this task (when you run the code, set the chunk option for `echo` to `FALSE`):
+```{r code-for-1b, echo = TRUE, eval = FALSE}
+## create a survfit object (estimates the KM curve)
+surv_obj <- survfit(ttocvd ~ diab2, data = inflamm)
+## plot it (lwd makes lines thicker; color diabetes red, no diabetes blue)
+plot(surv_obj, lwd = 2, col = c("blue", "red"), xlab = "Days of follow-up",
+     ylab = "Proportion surviving")
+## add a legend
+legend("bottomright", legend = c("No diabetes", "Diabetes"), lty = 1, 
+       col = c("blue", "red"))
+```
+
+### i. Which group has a higher mean survival time? State your reasoning.
+
+### ii. Can you estimate the median survival time? If so, provide the relevant estimate(s). If not, hypothesize why not.
+
+## c. (1 point) Perform a logrank test to test the hypotheses that the two survival curves are equal, using the code `survdiff(ttocvd ~ diab2, data = inflamm)`. Report the results of this test (i.e., provide the p-value and your statistical and scientific conclusions).
+
+## d. (1 point) Perform a proportional hazards regression of time-to-cardiovascular death as the outcome and diabetes status as the predictor, using the code `regress("hazard", ttocvd ~ diab2, data = inflamm)`. Report your results in 4--5 sentences.
+
+## e. (1 point) Perform a proportional hazards regression of time-to-cardiovascular death as the outcome, diabetes status as the predictor, but adjusting for age and C reactive protein. Interpret the coefficient estimate for the predictor of interest.
 
 \newpage
 
